--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "time1",
-  "main": "/src/index.ts",
+  "main": "src/index.ts",
   "compatibility_date": "2025-02-04",
   "observability": {
     "enabled": true
@@ -28,3 +28,4 @@
   ]
 
 }
+
